--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,75 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Hello World, MainActivity"
-            />
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical"
+                  android:layout_weight="1">
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="40dp">
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:background="@drawable/navigation_bar_bg"
+                      android:id="@+id/menu"
+                    />
+            <ImageButton
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/home"
+                    android:background="@drawable/navigation_bar_bg"/>
+        </RelativeLayout>
+
+        <ViewFlipper
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/viewFlipper"/>
+    </LinearLayout>
+
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_weight="1">
+        <ListView android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:id="@+id/listView">
+
+        </ListView>
+    </LinearLayout>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_weight="0"
+                  android:layout_height="40dp"
+                  android:background="#ff4a4a4a"
+                  android:orientation="horizontal">
+        <ImageButton android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:id="@+id/home"
+                     android:background="@android:color/transparent"
+                     android:src="@drawable/state1"/>
+        <ImageButton android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:src="@drawable/state2"
+                     android:background="@android:color/transparent"
+                     android:id="@+id/favourable"/>
+        <ImageButton android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:src="@drawable/state3"
+                     android:background="@android:color/transparent"
+                     android:id="@+id/nearby"/>
+        <ImageButton android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:src="@drawable/state4"
+                     android:background="@android:color/transparent"
+                     android:id="@+id/user"/>
+        <ImageButton android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     android:layout_weight="1"
+                     android:src="@drawable/state5"
+                     android:background="@android:color/transparent"
+                     android:id="@+id/more"/>
+    </LinearLayout>
 </LinearLayout>
 
