--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,78 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
+              android:orientation="vertical" android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
+    <TabHost
+            android:id="@android:id/tabhost"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
                   android:orientation="vertical"
-                  android:layout_weight="1">
-        <RelativeLayout android:layout_width="match_parent" android:layout_height="40dp">
-            <TextView android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:background="@drawable/navigation_bar_bg"
-                      android:id="@+id/menu"
-                    />
-            <ImageButton
-                    android:layout_marginLeft="10dp"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/home"
-                    android:background="@drawable/navigation_bar_bg"/>
-        </RelativeLayout>
+                  android:layout_height="match_parent">
 
-        <ViewFlipper
-                android:layout_width="match_parent"
+        <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:id="@+id/viewFlipper"/>
-    </LinearLayout>
+                android:layout_weight="1">
+            <LinearLayout
+                    android:id="@+id/home"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
+            </LinearLayout>
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_weight="1">
-        <ListView android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:id="@+id/listView">
+            <LinearLayout
+                    android:id="@+id/favorable"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
 
-        </ListView>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/nearby"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/user"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/more"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
+            </LinearLayout>
+        </FrameLayout>
+        <TabWidget
+                android:tabStripEnabled="false"
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="bottom"
+                android:background="@drawable/tab_bar_bg"
+                android:showDividers="none"/>
+
     </LinearLayout>
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_weight="0"
-                  android:layout_height="40dp"
-                  android:background="#ff4a4a4a"
-                  android:orientation="horizontal">
-        <ImageButton android:layout_width="match_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:id="@+id/home"
-                     android:background="@android:color/transparent"
-                     android:src="@drawable/state1"/>
-        <ImageButton android:layout_width="match_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:src="@drawable/state2"
-                     android:background="@android:color/transparent"
-                     android:id="@+id/favourable"/>
-        <ImageButton android:layout_width="match_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:src="@drawable/state3"
-                     android:background="@android:color/transparent"
-                     android:id="@+id/nearby"/>
-        <ImageButton android:layout_width="match_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:src="@drawable/state4"
-                     android:background="@android:color/transparent"
-                     android:id="@+id/user"/>
-        <ImageButton android:layout_width="match_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:src="@drawable/state5"
-                     android:background="@android:color/transparent"
-                     android:id="@+id/more"/>
-    </LinearLayout>
+    </TabHost>
+
 </LinearLayout>
-
